# cpp_cmake

./: CMakeLists.txt  README.md  build.sh
include/: program.h
modules/: CMakeLists.txt
modules/module_1/: CMakeLists.txt
modules/module_1/include/: module_1.h
modules/module_1/src/: module_1.cpp
modules/module_2/: CMakeLists.txt
modules/module_2/include/: module_2.h
modules/module_2/src/: module_2.cpp
src/: main.cpp  program.cpp
